--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <section>
         <h2>¡Bienvenido!</h2>
-        <p>Esta es una página HTML de ejemplo.</p>
+        <h2>Hola me llamo Naim</h2>
     </section>
     <section>
         <h2>Contacto</h2>
