--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </header>
     <section>
         <h2>¡Bienvenido!</h2>
-        <h2>Hola me llamo Naim</h2>
+    
+        <p>Hola me llamo Naim</p>
     </section>
     <section>
         <h2>Contacto</h2>
