--- a/firebase.html
+++ b/firebase.html
@@ -7,5 +7,53 @@
 </head>
 <body>
     <h1>Hola Mundo </h1>
+    <form id="crud from">
+        <label for="nombre">Nombre</label>
+        <input type="text" id="nombre">
+        <label for="edad">edad</label>
+        <input type="number" id="edad">
+        <button type="button">Aceptar</button>
+
+    </form>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+        import {getDatabase,ref, push, onValue, remove }from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyApGmYGClayBkfpkf4DW0MJHZTSIi_4nrA",
+          authDomain: "pruebasep-97ecc.firebaseapp.com",
+          databaseURL: "https://pruebasep-97ecc-default-rtdb.firebaseio.com",
+          projectId: "pruebasep-97ecc",
+          storageBucket: "pruebasep-97ecc.appspot.com",
+          messagingSenderId: "374094584102",
+          appId: "1:374094584102:web:a26de0b0aba01b94de89e7",
+          measurementId: "G-L7005Z6GJ9"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const database= getDatabase(app);
+
+        window.crearRegistro = function (){
+          const nombre =document.getElementById("nombre").value;
+          const edad =document.getElementById("edad").value;
+          console.log(nombre,edad);
+
+          push (
+            ref(database,'sep7'),
+            {
+            name: nombre,
+            age:edad
+           } 
+          )
+
+        }
+      </script>
+
 </body>
 </html>
