--- a/firebase.html
+++ b/firebase.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola Mundo </h1>
+    <h1>Hola a todos</h1>
     <form id="crud from">
         <label for="nombre">Nombre</label>
         <input type="text" id="nombre">
