--- a/firebase.html
+++ b/firebase.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hola a todos</h1>
     <form id="crud from">
-        <label for="nombre">Nombre</label>
+        <label for="name">Nombre</label>
         <input type="text" id="nombre">
         <label for="edad">edad</label>
         <input type="number" id="edad">
