--- a/firebase.html
+++ b/firebase.html
@@ -7,53 +7,47 @@
 </head>
 <body>
     <h1>Hola a todos</h1>
-    <form id="crud from">
+    <form id="crud_form">
         <label for="name">Nombre</label>
         <input type="text" id="nombre">
-        <label for="edad">edad</label>
+        <label for="edad">Edad</label>
         <input type="number" id="edad">
-        <button type="button">Aceptar</button>
-
+        <button type="button" onclick="crearRegistro()">Aceptar</button>
     </form>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-        import {getDatabase,ref, push, onValue, remove }from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
+        import { getDatabase, ref, push, onValue, remove } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
       
         // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-          apiKey: "AIzaSyApGmYGClayBkfpkf4DW0MJHZTSIi_4nrA",
-          authDomain: "pruebasep-97ecc.firebaseapp.com",
-          databaseURL: "https://pruebasep-97ecc-default-rtdb.firebaseio.com",
-          projectId: "pruebasep-97ecc",
-          storageBucket: "pruebasep-97ecc.appspot.com",
-          messagingSenderId: "374094584102",
-          appId: "1:374094584102:web:a26de0b0aba01b94de89e7",
-          measurementId: "G-L7005Z6GJ9"
+          apiKey: "your-api-key",
+          authDomain: "your-auth-domain",
+          databaseURL: "your-database-url",
+          projectId: "your-project-id",
+          storageBucket: "your-storage-bucket",
+          messagingSenderId: "your-messaging-sender-id",
+          appId: "your-app-id",
+          measurementId: "your-measurement-id"
         };
       
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
-        const database= getDatabase(app);
+        const database = getDatabase(app);
 
-        window.crearRegistro = function (){
-          const nombre =document.getElementById("nombre").value;
-          const edad =document.getElementById("edad").value;
-          console.log(nombre,edad);
+        window.crearRegistro = function () {
+          const nombre = document.getElementById("nombre").value;
+          const edad = document.getElementById("edad").value;
+          console.log(nombre, edad);
 
-          push (
-            ref(database,'sep7'),
+          push(
+            ref(database, 'sep7'),
             {
-            name: nombre,
-            age:edad
-           } 
-          )
-
-        }
-      </script>
-
+              name: nombre,
+              age: edad
+            }
+          );
+        };
+    </script>
 </body>
 </html>
