--- a/firebase.html
+++ b/firebase.html
@@ -22,13 +22,13 @@
         // Your web app's Firebase configuration
         const firebaseConfig = {
           apiKey: "your-api-key",
-          authDomain: "your-auth-domain",
-          databaseURL: "your-database-url",
-          projectId: "your-project-id",
-          storageBucket: "your-storage-bucket",
-          messagingSenderId: "your-messaging-sender-id",
-          appId: "your-app-id",
-          measurementId: "your-measurement-id"
+          authDomain: "pruebasep-97ecc.firebaseapp.com",
+          databaseURL: "https://pruebasep-97ecc-default-rtdb.firebaseio.com/",
+          projectId: "pruebasep-97ecc",
+          storageBucket: "pruebasep-97ecc.appspot.com",
+          messagingSenderId: "374094584102",
+          appId:  "1:374094584102:web:a26de0b0aba01b94de89e7",
+          measurementId:  "G-L7005Z6GJ9"
         };
       
         // Initialize Firebase
