--- a/firebase.html
+++ b/firebase.html
@@ -12,6 +12,9 @@
         <input type="text" id="nombre">
         <label for="edad">Edad</label>
         <input type="number" id="edad">
+        <input type="text" id="apellido">
+        <input type="text" id="direccion">
+        <input type="text" id="telefono">
         <button type="button" onclick="crearRegistro()">Aceptar</button>
     </form>
     <script type="module">
@@ -34,20 +37,68 @@
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const database = getDatabase(app);
-
         window.crearRegistro = function () {
-          const nombre = document.getElementById("nombre").value;
-          const edad = document.getElementById("edad").value;
-          console.log(nombre, edad);
-
-          push(
-            ref(database, 'sep7'),
-            {
-              name: nombre,
-              age: edad
+                const nombre = document.getElementById("nombre").value;
+                const apellido = document.getElementById("apellido").value;
+                const edad = document.getElementById("edad").value;
+                const direccion = document.getElementById("direccion").value;
+                const telefono = document.getElementById("telefono").value;
+                console.log(nombre, apellido, edad, direccion, telefono);
+                push(
+                    ref(database, 'Naim'),
+                    {
+                        name: nombre,
+                        lastname: apellido,
+                        age: edad,
+                        address:direccion,
+                        telephone:telefono
+                    }
+                );
             }
-          );
-        };
+
+            window.leerRegistro = function () {
+            const databaseRef = ref(database, 'Naim');
+            onValue(databaseRef, (snapshot) => {
+                const data = snapshot.val();
+                console.log("Registros:", data);
+            });
+        }
+            
+            window.actualizarRegistro = function () {
+                const registroId = document.getElementById("idOpciones").value;
+
+                if (!registroId) {
+                    console.log("Por favor, ingresa un ID válido para actualizar el registro.");
+                    return;
+                }
+
+                const nombre = document.getElementById("nombre").value;
+                const apellido = document.getElementById("apellido").value;
+                const edad = document.getElementById("edad").value;
+                const direccion = document.getElementById("direccion").value;
+                const telefono = document.getElementById("telefono").value;
+
+                const updates = {
+                    name: nombre,
+                    lastname: apellido,
+                    age: edad,
+                    address: direccion,
+                    telephone: telefono
+                };
+                update(ref(database, Naim/${registroId}), updates);
+                console.log("Registro actualizado con éxito.");
+            }
+
+            window.eliminarRegistro = function () {
+                const registroId = document.getElementById("idOpciones").value;
+                if (!registroId) {
+                    console.log("Por favor, ingresa un ID válido para eliminar el registro.");
+                    return;
+                }
+                remove(ref(database, septimo/${registroId}));
+                console.log("Registro eliminado con éxito.");
+            }
+       
     </script>
 </body>
 </html>
