--- a/firebase.html
+++ b/firebase.html
@@ -10,10 +10,17 @@
     <form id="crud_form">
         <label for="name">Nombre</label>
         <input type="text" id="nombre">
-        <label for="edad">Edad</label>
+        <br>
+        <label for="apellido">Apellido</label>
         <input type="number" id="edad">
+        <br>
+        <label for="edad">Edad</label>
         <input type="text" id="apellido">
+        <br>
+        <label for="direccion">Direccion</label>
         <input type="text" id="direccion">
+        <br>
+        <label for="telefono">telefono</label>
         <input type="text" id="telefono">
         <button type="button" onclick="crearRegistro()">Aceptar</button>
     </form>
