--- a/firebase.html
+++ b/firebase.html
@@ -102,7 +102,7 @@
                     console.log("Por favor, ingresa un ID válido para eliminar el registro.");
                     return;
                 }
-                remove(ref(database, septimo/${registroId}));
+                remove(ref(database, 'Naim/${registroId}'));
                 console.log("Registro eliminado con éxito.");
             }
        
