--- a/firebase.html
+++ b/firebase.html
@@ -92,7 +92,7 @@
                     address: direccion,
                     telephone: telefono
                 };
-                update(ref(database, Naim/${registroId}), updates);
+                update(ref(database, 'Naim/${registroId}'), updates);
                 console.log("Registro actualizado con éxito.");
             }
 
