--- a/firebase.html
+++ b/firebase.html
@@ -4,26 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      body {
+          font-family: 'Arial', sans-serif;
+          background-color: #f4f4f4;
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+      }
+
+      h2 {
+          color: #333;
+      }
+
+      form {
+          background-color: #fff;
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+          width: 300px;
+          margin-bottom: 20px;
+      }
+
+      label {
+          display: block;
+          margin-bottom: 8px;
+          color: #333;
+      }
+
+      input {
+          width: 100%;
+          padding: 8px;
+          margin-bottom: 12px;
+          box-sizing: border-box;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+      }
+
+      button {
+          background-color: #4caf50;
+          color: white;
+          padding: 10px 15px;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+      }
+
+      button:hover {
+          background-color: #45a049;
+      }
+
+      ul {
+          list-style-type: none;
+          padding: 0;
+          margin: 0;
+      }
+
+      li {
+          background-color: #fff;
+          padding: 15px;
+          margin-bottom: 10px;
+          border-radius: 4px;
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+          display: flex;
+          flex-direction: column;
+      }
+
+      li strong {
+          font-size: 18px;
+          margin-bottom: 8px;
+      }
+
+      li p {
+          margin: 0;
+          color: #555;
+      }
+
+      li button {
+          background-color: #d9534f;
+          color: white;
+          padding: 6px 10px;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+          margin-top: 8px;
+      }
+
+      li button:hover {
+          background-color: #c9302c;
+      }
+  </style>
 </head>
 <body>
-    <h1>Hola a todos .l.</h1>
-    <form id="crud_form">
-        <label for="name">Nombre</label>
-        <input type="text" id="nombre">
-        <br>
-        <label for="apellido">Apellido</label>
-        <input type="text" id="apellido">
-        <br>
-        <label for="edad">Edad</label>
-        <input type="number" id="edad">
-        <br>
-        <label for="direccion">Direccion</label>
-        <input type="text" id="direccion">
-        <br>
-        <label for="telefono">telefono</label>
-        <input type="text" id="telefono">
-        <button type="button" onclick="crearRegistro()">Aceptar</button>
-    </form>
+  <h2>Registro de Doctor</h2>
+
+  <!-- Formulario de Registro -->
+  <form id="doctorForm">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required>
+  
+      <label for="especialidad">Especialidad:</label>
+      <input type="text" id="especialidad" name="especialidad" required>
+  
+      <label for="direccion">Dirección:</label>
+      <input type="text" id="direccion" name="direccion">
+  
+      <label for="telefono">Teléfono:</label>
+      <input type="tel" id="telefono" name="telefono">
+  
+      <label for="correo">Correo Electrónico:</label>
+      <input type="email" id="correo" name="correo">
+  
+      <button type="button" onclick="crearDoctor()">Registrar</button>
+  </form>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
