--- a/firebase.html
+++ b/firebase.html
@@ -155,8 +155,7 @@
                     ref(database, 'Naim'),
                     {
                         name: nombre,
-                        lastname: apellido,
-                        age: edad,
+                        specialty: especialidad,
                         address:direccion,
                         telephone:telefono,
                         mail:correo
