--- a/firebase.html
+++ b/firebase.html
@@ -100,7 +100,7 @@
   </style>
 </head>
 <body>
-  <h2>Registro de Doctor</h2>
+  <h2>Registro de Doctorrrrrrrrrrrrrrr</h2>
 
   <!-- Formulario de Registro -->
   <form id="doctorForm">
