--- a/firebase.html
+++ b/firebase.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FormularioDoctor</title>
+    <!-- Add Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
       body {
           font-family: 'Arial', sans-serif;
@@ -123,9 +125,9 @@
       <label for="correo">Correo Electrónico:</label>
       <input type="email" id="correo" name="correo">
   
-      <button type="button" onclick="crearDoctor()">Registrar</button>
-      <button type="button" onclick="editarDoctor()">Editar</button>
-      <button type="button" onclick="EleminarDoctor()">Eleminar</button>
+      <button type="button" class="btn btn-success" onclick="crearDoctor()">Registrar</button>
+      <button type="button" class="btn btn-primary" onclick="editarDoctor()">Editar</button>
+      <button type="button" class="btn btn-danger" onclick="eliminarDoctor()">Eliminar</button>
 
   </form>
     <script type="module">
@@ -212,5 +214,8 @@
             }
        
     </script>
+
+    <!-- Add Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
