--- a/firebase.html
+++ b/firebase.html
@@ -3,119 +3,266 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FormularioDoctor</title>
+    <!-- Add Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      body {
+          font-family: 'Arial', sans-serif;
+          background-color: #f4f4f4;
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+      }
+
+      h2 {
+          color: #333;
+      }
+
+      form {
+          background-color: #fff;
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+          width: 300px;
+          margin-bottom: 20px;
+      }
+
+      label {
+          display: block;
+          margin-bottom: 8px;
+          color: #333;
+      }
+
+      input {
+          width: 100%;
+          padding: 8px;
+          margin-bottom: 12px;
+          box-sizing: border-box;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+      }
+
+      button {
+          margin-top: 8px;
+      }
+
+      ul {
+          list-style-type: none;
+          padding: 0;
+          margin: 0;
+      }
+
+      li {
+          background-color: #fff;
+          padding: 15px;
+          margin-bottom: 10px;
+          border-radius: 4px;
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+          display: flex;
+          flex-direction: column;
+      }
+
+      li strong {
+          font-size: 18px;
+          margin-bottom: 8px;
+      }
+
+      li p {
+          margin: 0;
+          color: #555;
+      }
+
+      li button {
+          margin-top: 8px;
+      }
+
+      li button {
+          background-color: #d9534f;
+          color: white;
+          padding: 6px 10px;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+      }
+
+      li button:hover {
+          background-color: #c9302c;
+      }
+  </style>
 </head>
 <body>
-    <h1>Hola a todos .l.</h1>
-    <form id="crud_form">
-        <label for="nombre">Nombre</label>
-        <input type="text" id="nombre">
-        <br>
-        <label for="apellido">Apellido</label>
-        <input type="text" id="apellido">
-        <br>
-        <label for="edad">Edad</label>
-        <input type="number" id="edad">
-        <br>
-        <label for="direccion">Dirección</label>
-        <input type="text" id="direccion">
-        <br>
-        <label for="telefono">Teléfono</label>
-        <input type="text" id="telefono">
-        <br>
-        <button type="button" onclick="crearRegistro()">Aceptar</button>
-        <br>
-        <label for="idOpciones">Seleccionar ID:</label>
-        <select id="idOpciones">
-            <!-- Options will be dynamically populated if needed -->
-        </select>
-        <br>
-        <button type="button" onclick="leerRegistro()">Leer Registros</button>
-        <button type="button" onclick="actualizarRegistro()">Actualizar Registro</button>
-        <button type="button" onclick="eliminarRegistro()">Eliminar Registro</button>
-    </form>
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-        import { getDatabase, ref, push, onValue, update, remove } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
+   
+  <h2>Registro de Doctor</h2>
+
+  <!-- Formulario de Registro -->
+  <form id="doctorForm">
+      <label for="id">ID</label>
+      <input type="text" id="id" readonly>
       
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "your-api-key",
-            authDomain: "pruebasep-97ecc.firebaseapp.com",
-            databaseURL: "https://pruebasep-97ecc-default-rtdb.firebaseio.com/",
-            projectId: "pruebasep-97ecc",
-            storageBucket: "pruebasep-97ecc.appspot.com",
-            messagingSenderId: "374094584102",
-            appId: "1:374094584102:web:a26de0b0aba01b94de89e7",
-            measurementId: "G-L7005Z6GJ9"
-        };
-      
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const database = getDatabase(app);
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required>
+  
+      <label for="especialidad">Especialidad:</label>
+      <input type="text" id="especialidad" name="especialidad" required>
+  
+      <label for="direccion">Dirección:</label>
+      <input type="text" id="direccion" name="direccion">
+  
+      <label for="telefono">Teléfono:</label>
+      <input type="tel" id="telefono" name="telefono">
+  
+      <label for="correo">Correo Electrónico:</label>
+      <input type="email" id="correo" name="correo">
+  
+      <button type="button" class="btn btn-success" onclick="crearDoctor()">Registrar</button>
+      <button type="button" class="btn btn-primary" onclick="editarDoctor()">Editar</button>
+      <button type="button" class="btn btn-danger" onclick="eliminarDoctor()">Eliminar</button>
 
-        window.crearRegistro = function () {
-            const nombre = document.getElementById("nombre").value;
-            const apellido = document.getElementById("apellido").value;
-            const edad = document.getElementById("edad").value;
-            const direccion = document.getElementById("direccion").value;
-            const telefono = document.getElementById("telefono").value;
-            console.log(nombre, apellido, edad, direccion, telefono);
-            push(
-                ref(database, 'Naim'),
-                {
-                    name: nombre,
-                    lastname: apellido,
-                    age: edad,
-                    address: direccion,
-                    telephone: telefono
-                }
-            );
-        };
+  </form>
 
-        window.leerRegistro = function () {
-            const databaseRef = ref(database, 'Naim');
-            onValue(databaseRef, (snapshot) => {
-                const data = snapshot.val();
-                console.log("Registros:", data);
-            });
-        };
+  <!-- Lista de Registros -->
+  <ul id="listaDoctores"></ul>
 
-        window.actualizarRegistro = function () {
-            const registroId = document.getElementById("idOpciones").value;
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+    import { getDatabase, ref, push, onValue, update, remove } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
 
-            if (!registroId) {
-                console.log("Por favor, ingresa un ID válido para actualizar el registro.");
-                return;
-            }
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+        apiKey: "your-api-key",
+        authDomain: "pruebasep-97ecc.firebaseapp.com",
+        databaseURL: "https://pruebasep-97ecc-default-rtdb.firebaseio.com/",
+        projectId: "pruebasep-97ecc",
+        storageBucket: "pruebasep-97ecc.appspot.com",
+        messagingSenderId: "374094584102",
+        appId: "1:374094584102:web:a26de0b0aba01b94de89e7",
+        measurementId: "G-L7005Z6GJ9"
+    };
 
-            const nombre = document.getElementById("nombre").value;
-            const apellido = document.getElementById("apellido").value;
-            const edad = document.getElementById("edad").value;
-            const direccion = document.getElementById("direccion").value;
-            const telefono = document.getElementById("telefono").value;
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
 
-            const updates = {
+    window.crearDoctor = function () {
+        const nombre = document.getElementById("nombre").value;
+        const especialidad = document.getElementById("especialidad").value;
+        const direccion = document.getElementById("direccion").value;
+        const telefono = document.getElementById("telefono").value;
+        const correo = document.getElementById("correo").value;
+        console.log(nombre, especialidad, direccion, telefono);
+        push(
+            ref(database, 'Naim'),
+            {
                 name: nombre,
-                lastname: apellido,
-                age: edad,
+                specialty: especialidad,
                 address: direccion,
-                telephone: telefono
-            };
-            update(ref(database, `Naim/${registroId}`), updates);
-            console.log("Registro actualizado con éxito.");
-        };
-
-        window.eliminarRegistro = function () {
-            const registroId = document.getElementById("idOpciones").value;
-            if (!registroId) {
-                console.log("Por favor, ingresa un ID válido para eliminar el registro.");
-                return;
+                telephone: telefono,
+                mail: correo
             }
-            remove(ref(database, `Naim/${registroId}`));
-            console.log("Registro eliminado con éxito.");
+        );
+        limpiarFormulario();
+        cargarDoctores();
+    }
+
+    window.editarDoctor = function () {
+        const id = document.getElementById("id").value;
+        const nombre = document.getElementById("nombre").value;
+        const especialidad = document.getElementById("especialidad").value;
+        const direccion = document.getElementById("direccion").value;
+        const telefono = document.getElementById("telefono").value;
+        const correo = document.getElementById("correo").value;
+
+        if (!id) {
+            console.log("Por favor, selecciona un doctor para editar.");
+            return;
+        }
+
+        const updates = {
+            name: nombre,
+            specialty: especialidad,
+            address: direccion,
+            telephone: telefono,
+            mail: correo
         };
-    </script>
+        update(ref(database, `Naim/${id}`), updates);
+        console.log("Registro actualizado con éxito.");
+        limpiarFormulario();
+        cargarDoctores();
+    }
+
+    window.eliminarDoctor = function () {
+        const id = document.getElementById("id").value;
+        if (!id) {
+            console.log("Por favor, selecciona un doctor para eliminar.");
+            return;
+        }
+        remove(ref(database, `Naim/${id}`));
+        console.log("Registro eliminado con éxito.");
+        limpiarFormulario();
+        cargarDoctores();
+    }
+
+    window.cargarDoctores = function () {
+        const listaDoctores = document.getElementById("listaDoctores");
+        listaDoctores.innerHTML = "";
+
+        const databaseRef = ref(database, 'Naim');
+        onValue(databaseRef, (snapshot) => {
+            const data = snapshot.val();
+            if (data) {
+                Object.keys(data).forEach((doctorId) => {
+                    const doctor = data[doctorId];
+                    const li = document.createElement("li");
+                    li.innerHTML = `
+                        <strong>${doctor.name}</strong>
+                        <p>Especialidad: ${doctor.specialty}</p>
+                        <p>Dirección: ${doctor.address}</p>
+                        <p>Teléfono: ${doctor.telephone}</p>
+                        <p>Correo: ${doctor.mail}</p>
+                        <button class="btn btn-primary" onclick="cargarDatosDoctor('${doctorId}')">Editar</button>
+                        <button class="btn btn-danger" onclick="eliminarDoctor('${doctorId}')">Eliminar</button>
+                    `;
+                    listaDoctores.appendChild(li);
+                });
+            }
+        });
+    }
+
+    window.cargarDatosDoctor = function (doctorId) {
+        const doctorRef = ref(database, `Naim/${doctorId}`);
+        onValue(doctorRef, (snapshot) => {
+            const doctor = snapshot.val();
+            if (doctor) {
+                document.getElementById("id").value = doctorId;
+                document.getElementById("nombre").value = doctor.name;
+                document.getElementById("especialidad").value = doctor.specialty;
+                document.getElementById("direccion").value = doctor.address;
+                document.getElementById("telefono").value = doctor.telephone;
+                document.getElementById("correo").value = doctor.mail;
+            }
+        });
+    }
+
+    window.limpiarFormulario = function () {
+        document.getElementById("id").value = "";
+        document.getElementById("nombre").value = "";
+        document.getElementById("especialidad").value = "";
+        document.getElementById("direccion").value = "";
+        document.getElementById("telefono").value = "";
+        document.getElementById("correo").value = "";
+    }
+
+    // Cargar la lista de doctores al cargar la página
+    cargarDoctores();
+  </script>
+
+  <!-- Add Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
