--- a/firebase.html
+++ b/firebase.html
@@ -52,6 +52,7 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            margin-top: 8px;
         }
 
         button:hover {
@@ -124,13 +125,9 @@
 </form>
 
 <!-- Lista de Doctores -->
-<h2>Listado de Doctores</h2>
-<ul id="listaDoctores">
-    <!-- Aquí se mostrarán los doctores registrados -->
-</ul>
+<ul id="listaDoctores"></ul>
 
 <script type="module">
-    
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
     import { getDatabase, ref, push, onValue, update, remove } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
@@ -150,31 +147,82 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
-    var doctores = [];
+    
+    // Function to create a new doctor
+    window.crearDoctor = function () {
+        const nombre = document.getElementById("nombre").value;
+        const especialidad = document.getElementById("especialidad").value;
+        const direccion = document.getElementById("direccion").value;
+        const telefono = document.getElementById("telefono").value;
+        const correo = document.getElementById("correo").value;
 
-    function crearDoctor() {
-        var nombre = document.getElementById("nombre").value;
-        var especialidad = document.getElementById("especialidad").value;
-        var direccion = document.getElementById("direccion").value;
-        var telefono = document.getElementById("telefono").value;
-        var correo = document.getElementById("correo").value;
-
-        var nuevoDoctor = {
+        push(ref(database, 'doctores'), {
             nombre: nombre,
             especialidad: especialidad,
             direccion: direccion,
             telefono: telefono,
             correo: correo
-        };
+        });
 
-        doctores.push(nuevoDoctor);
-
+        // Clear the form after creating a new doctor
         document.getElementById("doctorForm").reset();
-
-        actualizarListaDoctores();
     }
 
-  </script>
+    // Function to update a doctor
+    window.editarDoctor = function (id) {
+        const nombre = prompt("Ingrese el nuevo nombre:", "");
+        const especialidad = prompt("Ingrese la nueva especialidad:", "");
+        const direccion = prompt("Ingrese la nueva dirección:", "");
+        const telefono = prompt("Ingrese el nuevo teléfono:", "");
+        const correo = prompt("Ingrese el nuevo correo electrónico:", "");
 
-  </body>
+        update(ref(database, `doctores/${id}`), {
+            nombre: nombre,
+            especialidad: especialidad,
+            direccion: direccion,
+            telefono: telefono,
+            correo: correo
+        });
+    }
+
+    // Function to delete a doctor
+    window.eliminarDoctor = function (id) {
+        const confirmacion = confirm("¿Está seguro de eliminar este doctor?");
+        if (confirmacion) {
+            remove(ref(database, `doctores/${id}`));
+        }
+    }
+
+    // Function to render the list of doctors
+    function actualizarListaDoctores() {
+        const listaDoctores = document.getElementById("listaDoctores");
+        listaDoctores.innerHTML = "";
+
+        const databaseRef = ref(database, 'doctores');
+        onValue(databaseRef, (snapshot) => {
+            const data = snapshot.val();
+            if (data) {
+                Object.keys(data).forEach((doctorId) => {
+                    const doctor = data[doctorId];
+                    const li = document.createElement("li");
+                    li.innerHTML = `
+                        <strong>${doctor.nombre}</strong>
+                        <p>Especialidad: ${doctor.especialidad}</p>
+                        <p>Dirección: ${doctor.direccion}</p>
+                        <p>Teléfono: ${doctor.telefono}</p>
+                        <p>Correo: ${doctor.correo}</p>
+                        <button onclick="editarDoctor('${doctorId}')">Editar</button>
+                        <button onclick="eliminarDoctor('${doctorId}')">Eliminar</button>
+                    `;
+                    listaDoctores.appendChild(li);
+                });
+            }
+        });
+    }
+
+    // Load initial list of doctors
+    actualizarListaDoctores();
+</script>
+
+</body>
 </html>
