--- a/firebase.html
+++ b/firebase.html
@@ -121,7 +121,7 @@
     <label for="correo">Correo Electrónico:</label>
     <input type="email" id="correo" name="correo">
 
-    <button type="button" onclick="crearDoctor()">Registrar</button>
+    <button type="button" onclick="guardarDoctor()">Guardar</button>
 </form>
 
 <!-- Lista de Doctores -->
@@ -147,53 +147,30 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
-    
-    // Function to create a new doctor
-    window.crearDoctor = function () {
+
+    function guardarDoctor() {
         const nombre = document.getElementById("nombre").value;
         const especialidad = document.getElementById("especialidad").value;
         const direccion = document.getElementById("direccion").value;
         const telefono = document.getElementById("telefono").value;
         const correo = document.getElementById("correo").value;
 
-        push(ref(database, 'doctores'), {
-            nombre: nombre,
-            especialidad: especialidad,
-            direccion: direccion,
-            telefono: telefono,
-            correo: correo
-        });
+        if (nombre && especialidad) {
+            const nuevoDoctor = {
+                nombre,
+                especialidad,
+                direccion,
+                telefono,
+                correo
+            };
 
-        // Clear the form after creating a new doctor
-        document.getElementById("doctorForm").reset();
-    }
-
-    // Function to update a doctor
-    window.editarDoctor = function (id) {
-        const nombre = prompt("Ingrese el nuevo nombre:", "");
-        const especialidad = prompt("Ingrese la nueva especialidad:", "");
-        const direccion = prompt("Ingrese la nueva dirección:", "");
-        const telefono = prompt("Ingrese el nuevo teléfono:", "");
-        const correo = prompt("Ingrese el nuevo correo electrónico:", "");
-
-        update(ref(database, `doctores/${id}`), {
-            nombre: nombre,
-            especialidad: especialidad,
-            direccion: direccion,
-            telefono: telefono,
-            correo: correo
-        });
-    }
-
-    // Function to delete a doctor
-    window.eliminarDoctor = function (id) {
-        const confirmacion = confirm("¿Está seguro de eliminar este doctor?");
-        if (confirmacion) {
-            remove(ref(database, `doctores/${id}`));
+            push(ref(database, 'doctores'), nuevoDoctor);
+            document.getElementById("doctorForm").reset();
+        } else {
+            alert("Nombre y Especialidad son campos obligatorios.");
         }
     }
 
-    // Function to render the list of doctors
     function actualizarListaDoctores() {
         const listaDoctores = document.getElementById("listaDoctores");
         listaDoctores.innerHTML = "";
@@ -208,9 +185,9 @@
                     li.innerHTML = `
                         <strong>${doctor.nombre}</strong>
                         <p>Especialidad: ${doctor.especialidad}</p>
-                        <p>Dirección: ${doctor.direccion}</p>
-                        <p>Teléfono: ${doctor.telefono}</p>
-                        <p>Correo: ${doctor.correo}</p>
+                        <p>Dirección: ${doctor.direccion || "No especificada"}</p>
+                        <p>Teléfono: ${doctor.telefono || "No especificado"}</p>
+                        <p>Correo: ${doctor.correo || "No especificado"}</p>
                         <button onclick="editarDoctor('${doctorId}')">Editar</button>
                         <button onclick="eliminarDoctor('${doctorId}')">Eliminar</button>
                     `;
@@ -220,7 +197,30 @@
         });
     }
 
-    // Load initial list of doctors
+    function editarDoctor(doctorId) {
+        const databaseRef = ref(database, `doctores/${doctorId}`);
+        onValue(databaseRef, (snapshot) => {
+            const doctor = snapshot.val();
+            if (doctor) {
+                document.getElementById("nombre").value = doctor.nombre || "";
+                document.getElementById("especialidad").value = doctor.especialidad || "";
+                document.getElementById("direccion").value = doctor.direccion || "";
+                document.getElementById("telefono").value = doctor.telefono || "";
+                document.getElementById("correo").value = doctor.correo || "";
+
+                // Eliminar el doctor después de cargar los datos para evitar duplicados
+                eliminarDoctor(doctorId);
+            }
+        });
+    }
+
+    function eliminarDoctor(doctorId) {
+        if (confirm("¿Estás seguro de que deseas eliminar este doctor?")) {
+            remove(ref(database, `doctores/${doctorId}`));
+        }
+    }
+
+    // Cargar la lista de doctores al cargar la página
     actualizarListaDoctores();
 </script>
 
