--- a/firebase.html
+++ b/firebase.html
@@ -141,7 +141,7 @@
         <label for="correo">Correo Electrónico:</label>
         <input type="email" id="correo" name="correo">
 
-        <button type="button" onclick="crearDoctor()">Registrar</button>
+        <button type="button" onclick="crearDoctor()">Guardar</button>
     </form>
 
     <!-- Lista de Doctores en una tabla -->
